adds user crud
